[gd_scene load_steps=7 format=2]

[ext_resource path="res://constructs/pot/pot.gd" type="Script" id=1]
[ext_resource path="res://constructs/pot/sprite/pot_back.png" type="Texture" id=2]
[ext_resource path="res://constructs/pot/sprite/pot_front.png" type="Texture" id=3]
[ext_resource path="res://constructs/pot/sprite/pot_top.png" type="Texture" id=4]
[ext_resource path="res://GUI/evolution_panel/sprites/cost_background.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 50.0
height = 70.0

[node name="pot" type="StaticBody2D"]
position = Vector2( 0, -81 )
script = ExtResource( 1 )

[node name="back" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="spot_1" type="Node2D" parent="."]
position = Vector2( 0, 32 )

[node name="spot_2" type="Node2D" parent="."]
position = Vector2( 56, 24 )

[node name="spot_3" type="Node2D" parent="."]
position = Vector2( -56, 24 )

[node name="spot_meal" type="Node2D" parent="."]
position = Vector2( 0, -8 )

[node name="front" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="top" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 56 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="cook_button" type="TextureButton" parent="."]
margin_left = 113.417
margin_top = -38.8475
margin_right = 163.417
margin_bottom = 1.15253
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="cook_button" to="." method="_on_cook_button_pressed"]
